--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "globals": "^16.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "vite": "^6.3.5"
   }
 }
